--- a/styles/app.css
+++ b/styles/app.css
@@ -15,6 +15,9 @@ body {
     overflow: hidden;
     font-family: 'Courier New', Courier, monospace;
     /* Temporary retro font */
+    touch-action: none;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 #game-container {
