fix(css): add pointer-events:auto to os-overlay to allow clicks

--- a/styles/app.css
+++ b/styles/app.css
@@ -139,6 +139,7 @@ div.interactable:hover {
     color: #4af626;
     overflow: hidden;
     user-select: none;
+    pointer-events: auto;
     box-sizing: border-box;
 }
 
