--- a/styles/app.css
+++ b/styles/app.css
@@ -241,17 +241,21 @@ div.interactable:hover {
 /* OS Windows */
 .os-window {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 80%;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 85%;
     background-color: #000;
     border: 2px solid #4af626;
     box-shadow: 5px 5px 0px rgba(74, 246, 38, 0.5);
     display: flex;
     flex-direction: column;
     z-index: 10;
+    resize: both;
+    overflow: hidden;
+    /* Content area scrolls if needed */
+    min-width: 600px;
+    min-height: 400px;
 }
 
 .os-window-header {
@@ -299,7 +303,7 @@ div.interactable:hover {
 }
 
 /* Bins Area */
-.bins-container {
+#bin-container {
     display: flex;
     justify-content: space-around;
     position: absolute;
